<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="settings">Настройки\n</string>
    <string name="Search">Поиск</string>
    <string name="Settings">Настройки</string>
    <string name="Медиатека">Медиатека</string>
    <string name="darkmode">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="contract">Пользовательское соглашение</string>
</resources>