<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/blue">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">

        <TextView
            android:gravity="bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/side"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="210dp"
            android:layout_marginBottom="@dimen/side"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="22sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/firstbutt"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="80dp"
        >

        <Button
            android:id="@+id/firstbutton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/side"
            android:layout_marginEnd="@dimen/side"
            android:layout_marginBottom="8dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/Search"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:backgroundTint="@color/white"
            app:cornerRadius="16dp"
            app:icon="@drawable/search"
            app:iconGravity="textStart"
            app:iconTint="@color/black"
            app:iconPadding="8dp"/>

        <Button
            android:id="@+id/secondbutton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/side"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/side"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/Медиатека"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:backgroundTint="@color/white"
            app:cornerRadius="16dp"
            app:icon="@drawable/mediateka"
            app:iconGravity="textStart"
            app:iconTint="@color/black"
            app:iconPadding="8dp"
            />

        <Button
            android:id="@+id/thirdbutton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/side"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/side"
            android:layout_marginBottom="28dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/Settings"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:backgroundTint="@color/white"
            app:cornerRadius="16dp"
            app:icon="@drawable/settings"
            app:iconGravity="textStart"
            app:iconTint="@color/black"
            app:iconPadding="8dp"/>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>